@@ -30,21 +30,21 @@ my $fd = do {
     $fh->seek(0, 0);
     fileno($fh);
 };
-my (undef, $proto, $status, $head, $body) = Hijk::_read_http_message($fd, undef, 1);
+my (undef, $proto, $status, $head, $body) = Hijk::_read_http_message($fd, undef, 1, 1);
 
 
 is $status, 200;
 is $body, "Wikipedia in\r\n\r\nchunks.";
 
-is_deeply $head, {
+is_deeply $head, [
     "Last-Modified" => "Sat, 26 Oct 2013 19:41:47 GMT",
     "ETag" => '"4b9d0211dd8a2819866bccff777af225"',
     "Content-Type" => "text/html",
     "Server" => "Example",
-    'non-sence' => 'a' x 20000,
     "Transfer-Encoding" => "chunked",
     'Trailer' => 'Date',
-};
+    'non-sence' => 'a' x 20000,
+];
 # fetch again without seeking back
 # this will force select() to return because there are actually
 # 0 bytes to read - so we can simulate connection closed
