@@ -29,7 +29,7 @@ my $fd = do {
     fileno($fh);
 };
 
-my ($proto, $status, $head, $body) = Hijk::_read_http_message($fd,0);
+my (undef, $proto, $status, $head, $body) = Hijk::_read_http_message($fd,0);
 
 
 is $status, 200;
@@ -43,7 +43,7 @@ is_deeply $head, {
 };
 is $body, 'a' x 100000;
 
-($proto, $status, $head, $body, my $error, my $error_message) = Hijk::_read_http_message($fd);
+(undef, $proto, $status, $head, $body, my $error, my $error_message) = Hijk::_read_http_message($fd);
 is $error, Hijk::Error::RESPONSE_BAD_READ_VALUE;
 like $error_message, qr/0 byte/;
 
